feat: LabApplicationController 구현 완료 및 회원가입시 Lab 정보 필요 없도록 수정
- LabApplicationController 구현 완료
- 가입시 Lab 정보 필요 없도록 수정